# HookTracerPid

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/inlinehook/hooktracerpid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/java/com/inlinehook/hooktracerpid/: MHook.java  MainActivity.java
app/src/main/java/com/inlinehook/hooktracerpid/utils/: Constants.java  LogUtils.java  SdUtils.java
app/src/main/jni/: CMakeLists.txt  main.cpp  main.h
app/src/main/jni/Hook/: HLua.cpp  HLua.h
app/src/main/jni/Substrate/: SubstrateARM.hpp  SubstrateHook.cpp
app/src/main/jni/dlfc/: dlfcn_compat.cpp  dlfcn_compat.h  dlfcn_nougat.cpp  dlfcn_nougat.h
app/src/main/jni/inlineHook/: inlineHook.cpp  inlineHook.h  relocate.cpp  relocate.h
app/src/main/jni/utils/: Log.h  logging.h  macros.h  parse.cpp  parse.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/inlinehook/hooktracerpid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
